--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "Code from the React tutorial.",
   "main": "server.js",
   "dependencies": {
+    "autoprefixer-loader": "^1.0.0",
     "body-parser": "^1.6.6",
     "cors": "^2.4.1",
     "css-loader": "^0.9.0",
     "express": "^4.8.6",
     "jquery": "^1.11.1",
+    "lodash": "^2.4.1",
+    "mcfly": "0.0.7",
     "react": "^0.12.1",
     "style-loader": "^0.8.2"
   },
