lot of changes..

--- a/package.json
+++ b/package.json
@@ -9,20 +9,26 @@
     "cors": "^2.4.1",
     "css-loader": "^0.9.0",
     "express": "^4.8.6",
+    "font-awesome": "^4.2.0",
+    "font-awesome-webpack": "0.0.2",
     "jquery": "^1.11.1",
     "lodash": "^2.4.1",
     "mcfly": "0.0.7",
     "react": "^0.12.1",
+    "reactfire": "^0.4.0",
     "style-loader": "^0.8.2"
   },
   "devDependencies": {
     "es6-loader": "^0.2.0",
     "exports-loader": "^0.6.2",
+    "file-loader": "^0.8.1",
     "imports-loader": "^0.6.3",
     "jsx-loader": "^0.12.0",
     "less": "^1.7.5",
     "less-loader": "^0.7.7",
+    "raw-loader": "^0.5.1",
     "react-hot-loader": "^0.4.2",
+    "url-loader": "^0.5.5",
     "webpack": "^1.4.0-beta1",
     "webpack-dev-server": "^1.5.0"
   },
