firebase + localstorage cache works

--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "cors": "^2.4.1",
     "css-loader": "^0.9.0",
     "express": "^4.8.6",
+    "firebase": "^2.0.6",
     "font-awesome": "^4.2.0",
     "font-awesome-webpack": "0.0.2",
     "jquery": "^1.11.1",
     "lodash": "^2.4.1",
     "mcfly": "0.0.7",
     "react": "^0.12.1",
+    "react-localstorage": "0.0.1",
     "reactfire": "^0.4.0",
     "style-loader": "^0.8.2"
   },
