--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "font-awesome": "^4.2.0",
     "font-awesome-webpack": "0.0.2",
     "jquery": "^1.11.1",
+    "json-loader": "^0.5.1",
     "lodash": "^2.4.1",
     "mcfly": "0.0.7",
     "react": "^0.12.1",
