--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "cors": "^2.4.1",
     "css-loader": "^0.9.0",
     "express": "^4.8.6",
+    "fastclick": "^1.0.3",
     "firebase": "^2.0.6",
     "font-awesome": "^4.2.0",
     "font-awesome-webpack": "0.0.2",
     "jquery": "^1.11.1",
     "json-loader": "^0.5.1",
     "lodash": "^2.4.1",
+    "material-ui": "^0.4.0",
     "mcfly": "0.0.7",
     "react": "^0.12.1",
     "react-localstorage": "0.0.1",
+    "react-tap-event-plugin": "^0.1.3",
     "reactfire": "^0.4.0",
-    "style-loader": "^0.8.2"
+    "style-loader": "^0.8.2",
+    "velocity-animate": "^1.1.0"
   },
   "devDependencies": {
     "es6-loader": "^0.2.0",
