--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^2.0.6",
     "font-awesome": "^4.2.0",
     "font-awesome-webpack": "0.0.2",
+    "immutable": "^3.4.1",
     "jquery": "^1.11.1",
     "json-loader": "^0.5.1",
     "lodash": "^2.4.1",
