--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-localstorage": "0.0.1",
     "react-tap-event-plugin": "^0.1.3",
     "reactfire": "^0.4.0",
+    "reflux": "^0.2.1",
     "style-loader": "^0.8.2",
     "velocity-animate": "^1.1.0"
   },
