--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "jest"
+
   },
   "repository": {
     "type": "git",
