puoa.. getting somewhere .. ux is hard

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "font-awesome-webpack": "0.0.2",
     "immutable": "^3.4.1",
     "jquery": "^1.11.1",
+    "jquery-smooth-scroll": "^1.5.4",
     "json-loader": "^0.5.1",
     "lodash": "^2.4.1",
     "material-ui": "^0.4.0",
@@ -42,10 +43,8 @@
     "webpack-dev-server": "^1.5.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "test": "jest"
-
+    "test": "jest",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
