--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mcfly": "0.0.7",
     "react": "^0.12.1",
     "react-localstorage": "0.0.1",
+    "react-style": "^0.3.1",
     "react-tap-event-plugin": "^0.1.3",
     "reactfire": "^0.4.0",
     "reflux": "^0.2.1",
