--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "font-awesome": "^4.2.0",
     "font-awesome-webpack": "0.0.2",
     "immutable": "^3.4.1",
+    "install": "^0.1.8",
     "jquery": "^1.11.1",
     "jquery-smooth-scroll": "^1.5.4",
+    "jsnox": "^0.9.1",
     "json-loader": "^0.5.1",
     "lodash": "^2.4.1",
     "material-ui": "^0.4.0",
     "mcfly": "0.0.7",
+    "ramda": "^0.8.0",
     "react": "^0.12.1",
     "react-localstorage": "0.0.1",
     "react-style": "^0.3.1",
@@ -27,6 +30,7 @@
     "reactfire": "^0.4.0",
     "reflux": "^0.2.1",
     "style-loader": "^0.8.2",
+    "tcomb-react": "^0.1.2",
     "velocity-animate": "^1.1.0"
   },
   "devDependencies": {
