--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-localstorage": "0.0.1",
     "react-style": "^0.3.1",
     "react-tap-event-plugin": "^0.1.3",
+    "react-tween-state": "0.0.4",
     "reactfire": "^0.4.0",
     "reflux": "^0.2.1",
     "style-loader": "^0.8.2",
