--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
   },
   "scripts": {
     "test": "jest",
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "webpack --optimize-minimize --optimize-occurence-order --optimize-dedupe"
   },
   "repository": {
     "type": "git",
