--- a/package.json
+++ b/package.json
@@ -12,27 +12,15 @@
     "express": "^4.8.6",
     "fastclick": "^1.0.3",
     "firebase": "^2.0.6",
-    "font-awesome": "^4.2.0",
-    "font-awesome-webpack": "0.0.2",
-    "immutable": "^3.4.1",
     "install": "^0.1.8",
-    "jquery": "^1.11.1",
-    "jquery-smooth-scroll": "^1.5.4",
     "jsnox": "^0.9.1",
     "json-loader": "^0.5.1",
     "lodash": "^2.4.1",
-    "material-ui": "^0.4.0",
-    "mcfly": "0.0.7",
-    "ramda": "^0.8.0",
-    "react": "^0.12.1",
+    "react": "^0.13.2",
     "react-localstorage": "0.0.1",
-    "react-style": "^0.3.1",
     "react-tap-event-plugin": "^0.1.3",
-    "react-tween-state": "0.0.4",
-    "reactfire": "^0.4.0",
     "reflux": "^0.2.1",
     "style-loader": "^0.8.2",
-    "tcomb-react": "^0.1.2",
     "velocity-animate": "^1.1.0"
   },
   "devDependencies": {
@@ -48,7 +36,7 @@
     "less": "^1.7.5",
     "less-loader": "^0.7.7",
     "raw-loader": "^0.5.1",
-    "react-hot-loader": "^0.4.2",
+    "react-hot-loader": "1.2.5",
     "url-loader": "^0.5.5",
     "webpack": "^1.4.0-beta1",
     "webpack-dev-server": "^1.5.0"
