--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "autoprefixer-loader": "^1.0.0",
+    "babel": "5.1.11",
     "body-parser": "^1.6.6",
     "cors": "^2.4.1",
     "css-loader": "^0.9.0",
@@ -35,7 +36,11 @@
     "velocity-animate": "^1.1.0"
   },
   "devDependencies": {
+    "babel-core": "5.1.11",
+    "babel-loader": "5.0.0",
+    "babel-runtime": "5.1.11",
     "es6-loader": "^0.2.0",
+    "extract-text-webpack-plugin": "0.5.0",
     "exports-loader": "^0.6.2",
     "file-loader": "^0.8.1",
     "imports-loader": "^0.6.3",
