--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   "scripts": {
     "test": "jest",
     "start": "webpack-dev-server --config webpack.config.js --hot --progress",
-    "build": "webpack --optimize-minimize --optimize-occurence-order --optimize-dedupe"
+    "build": "NODE_ENV=production webpack --config ./webpack.prod.config.js"
   },
   "repository": {
     "type": "git",
