--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "autoprefixer-loader": "^1.0.0",
     "babel": "5.1.11",
     "body-parser": "^1.6.6",
+    "color": "^0.8.0",
     "cors": "^2.4.1",
     "css-loader": "^0.9.0",
     "express": "^4.8.6",
