--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "jsnox": "^0.9.1",
     "json-loader": "^0.5.1",
     "lodash": "^2.4.1",
+    "parse": "^1.4.2",
     "react": "^0.13.2",
+    "react-immutable-render-mixin": "^0.8.1",
     "react-localstorage": "0.0.1",
-    "react-tap-event-plugin": "^0.1.3",
+    "react-tap-event-plugin": "0.1.6",
+    "react-tappable": "^0.5.0-beta.3",
     "reflux": "^0.2.1",
     "style-loader": "^0.8.2",
     "velocity-animate": "^1.1.0"
